--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"highlight.js": "11.1.0",
+		"javascript-time-ago": "^2.3.9",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
 	},
